Styling. About page. Taglines

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,22 +1,19 @@
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porta sapien ipsum, sed eleifend risus vestibulum sit amet. Aliquam ultrices metus vestibulum gravida molestie. Sed dapibus, est et euismod iaculis, justo tortor ultricies libero, nec auctor magna massa in leo. Integer euismod augue nec metus rhoncus lobortis. Proin placerat mi dignissim, mattis neque sed, blandit mi. Sed vitae ullamcorper ligula, ac consectetur lacus. Praesent euismod turpis vitae velit euismod, nec condimentum enim volutpat. Nunc molestie massa magna. Ut vel gravida urna, elementum vestibulum magna. Fusce quis aliquam elit. Vestibulum quis ornare tellus. Mauris malesuada leo neque, ut semper nisi facilisis id. Phasellus ullamcorper mauris sed dui vehicula tempor.
+<h3>
+  <em>HashCatch lets you control stuff through your regular tweets</em>
+</h3>
 
-Cras tristique cursus dui ac pellentesque. Aliquam et sagittis arcu. Duis vitae purus lacinia lectus tincidunt tincidunt. Aenean sed fringilla lacus, a suscipit elit. Curabitur non leo sit amet tellus vulputate tincidunt id non lorem. Morbi a blandit ipsum. Vivamus felis massa, posuere eget dictum sodales, pulvinar et nunc.
+<p>
+There are different HashCatch <em>applications</em> that can do stuff by interpreting your tweet.  We hope to expand our applications dramatically, using our tweet handling framework.  Check out the founder's <%= link_to "HashCatch profile", "/beneills" %> for ideas on what to tweet!
+</p>
 
-Sed mattis ornare tincidunt. Nam posuere bibendum arcu ac tristique. Etiam malesuada dapibus odio, euismod molestie felis tempus in. Sed auctor augue vitae magna porttitor, in auctor nulla gravida. Donec varius elit eu sem consequat sagittis. Aenean imperdiet tellus ac elit egestas, nec varius lacus ultricies. Vestibulum tincidunt viverra viverra. Cras eget urna vel erat euismod suscipit. Maecenas id sem quam. Duis nec sapien blandit, ornare enim ac, commodo turpis.
+<p>
+We try to make the application's syntax as natural and forgiving as possible, so you can tweet like you usually do.  everyone sees you tweet as they do now, but instead of being buried in a timeline somewhere, the tweet is given semantic meaning and stored in your profile.
+</p>
 
-Sed eleifend libero erat, sed vulputate elit porttitor eu. Curabitur blandit, lorem eu laoreet dapibus, leo justo adipiscing risus, vitae molestie dui lectus vel magna. Maecenas scelerisque lacus quam, eu pharetra tortor consectetur id. Nulla a lectus in enim venenatis malesuada a sed risus. Sed dictum enim eget ligula lacinia condimentum. Etiam sodales ipsum at turpis fringilla, eget convallis nulla fermentum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus placerat leo non dolor semper, scelerisque bibendum nulla pharetra. Nam ac neque tincidunt, posuere leo adipiscing, sagittis erat. Sed et dolor a quam feugiat tristique et sodales metus. Duis rutrum sapien in massa mattis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ante quam, eleifend eu mauris eu, condimentum dictum diam. Sed aliquet dolor risus, iaculis faucibus ipsum gravida sit amet.
+<p>
+All you have to do is add <strong>#hashcatch</strong> (or <strong>#hc</strong> for short).
+</p>
 
-Aliquam egestas, risus sagittis consequat tempor, orci enim iaculis arcu, nec mattis dolor justo ut metus. In at vulputate urna, eu posuere lectus. Phasellus vel blandit lectus, mattis sollicitudin lacus. Vestibulum porta ullamcorper dolor vel fringilla. Mauris dapibus molestie dignissim. Nam porttitor viverra malesuada. Cras ut lacus orci. Praesent a eros nec risus convallis iaculis nec non sem. Duis sollicitudin semper mi. Suspendisse potenti. Mauris suscipit tincidunt leo vitae adipiscing. Praesent interdum ligula quis justo blandit lacinia.
-
-<!-- <h2>About</h2> -->
-
-<!--     <h4 id="help-tagline"> -->
-<!--       <em>HashCatch lets you control stuff through your regular tweets</em> -->
-<!--     </h4> -->
-    
-<!--     For example, you tweet this: -->
-
-<!--     <blockquote class="twitter-tweet"><p>#2 book is Huckleberry Finn <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/381105085213716480">September 20, 2013</a></blockquote> -->
-<!-- <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
-
-<!--     and HashCatch undertstands you: -->
+<p>
+  <em>No signing up.  No logging in.  Just tweeting.</em>
+</p>
