--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -90,5 +90,7 @@ a, a:visited {
     cursor: pointer;
     background-color: white;
     padding: 2px;
+
+    border: 1px solid $grey1;
     border-radius: 3px;
 }
