--- a/app/views/users/_cite.html.erb
+++ b/app/views/users/_cite.html.erb
@@ -2,30 +2,30 @@
   <div class="application-head">
     <span class="application-title">Cite<sup>?</sup></span>
     <span class="application-help">
-      cite stuff TODO
+      save a page snapshot via WebCite
 
       <code>
-	TODO
+	cite|archive &lt;URL&gt; [note] #hashcatch
       </code>
     </span>
   </div>
 
   <div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
 
-  <% if !app.entries.empty? %>
-    <% app.entries.each do |entry| %>
-      <li>
-	<a href="<%= entry.url %>"><%= entry.url %></a> -
-	<em><%= entry.note %></em> - 
-	<% if entry.archived? %>
-	  [<a href="<%= entry.archive_url %>">archived copy</a>]
-	<% else %>
-	  [not yet archived]
-	<% end %>
-      </li>
+  <%= app.entries.each_or_message do |entry| %>
+  <li>
+    <a href="<%= entry.url %>"><%= entry.url %></a>
+    <% if entry.note %>
+      <em>[<%= entry.note %>]</em>
     <% end %>
-  <% else %>
-    <em>no entries yet</em>
+
+    <% if entry.archived? %>
+    <em>[<a href="<%= entry.archive_url %>">archived</a>]</em>
+    <% else %>
+    <em>[archiving...]</em>
+    <% end %>
+  </li>
   <% end %>
+
 
 </span>
