Finalize help text

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -25,6 +25,14 @@
     margin-top: 0.2em;
 }
 
+#help p {
+    width: 60%;
+}
+
+#help img, #help #top-example-tweet {
+    margin-left: 1em;
+}
+
 #welcome-content {
     margin-top: 1em;
     margin-bottom: 1em;
