--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -26,7 +26,7 @@
     </div>
     <div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
     
-    What do you want to see next? <a href="mailto:TODO">Tell us!</a>
+    What app do you want to see next? <a href="mailto:ben@hashcatch.com">Tell us!</a>
   </span>
 
 
