--- a/app/views/welcome/_help.html.erb
+++ b/app/views/welcome/_help.html.erb
@@ -2,14 +2,15 @@
   <em>HashCatch lets you control stuff through your regular tweets</em>
 </h3>
 
+<p>
 For example, you tweet this:
-
-<span id="top-example-tweet">
-  <blockquote class="twitter-tweet"><p>#2 book is Huckleberry Finn <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/381105085213716480">September 20, 2013</a></blockquote>
+</p>
+  <blockquote class="twitter-tweet"><p>#1 book is A Confederacy of Dunces <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/387629624412213248">October 8, 2013</a></blockquote>
   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-</span>
 
-and HashCatch understands you:
+<p>
+  HashCatch detects the #hashcatch hashtag, understands your tweet, and adds it to your profile page: <strong>hashcatch.com/twitterusername</strong>
+</p>
 
 <%= image_tag("top-example.png", :alt => "Example Output", :id => "top-example") %>
 
